[package]
name = "raster_to_pixel"
version = "0.1.0"
edition = "2021"
license = "MIT"

# ZERO dependencies on purpose — core algorithms are pure std and testable offline.
# The user installs all deps personally. When approved, the pipeline will want:
# [dependencies]
# image = "0.25"   # decode/encode PNG/JPG/WebP (MIT)
# clap = { version = "4", features = ["derive"] }
# rayon = "1"      # batch parallelism
[dependencies]
clap = { version = "4", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
