[package]
name = "raster_to_pixel"
version = "0.1.0"
edition = "2021"
license = "MIT"

# Core algorithms are pure std and testable offline. The CLI/GUI use the approved
# image and clap crates for file formats and argument parsing.
[dependencies]
clap = { version = "4", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
